Fix display wrap

--- a/blocks/profile/__edit/profile__edit.css
+++ b/blocks/profile/__edit/profile__edit.css
@@ -5,6 +5,7 @@
   border: 1px solid #FFFFFF;
   box-sizing: border-box;
   align-self: center;
+  margin-left: 17.25px;
 }
 
 .profile__edit:hover {
